--- a/css/mobile.css
+++ b/css/mobile.css
@@ -219,3 +219,9 @@ div div ul a{
         font-size:4px;
     }
 }
+
+@media screen and (min-width:500px) and (max-width:2000px){
+    .img1,.img2,.img3,.img4,.img5{
+        height:300px;
+    }
+}
